# pvValidator

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  CHANGELOG.md  CHANGELOG.old  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
doc/: pvvalidator.md
docs/: HANDOVER2ess.md  ONLINE_MODE_SETUP.md  PLAN-ESS-NETWORK.md  QA_PLAN.md
pvValidatorUtils/: __init__.py  autofix.py  epicsUtils.py  exceptions.py  naming_client.py  parser.py  pvUtils.py  pvValidator.py  reporter.py  rule_loader.py  rules.py  tabview.py
pvValidatorUtils/data/: standard_properties.yaml
pvValidatorUtils/data/rules/: ess-0000757-rev10.yaml
pvValidatorUtils/web/: guide.html  index.html  reference.html
pvValidatorUtils/web/fonts/: OFL.txt
src/: epicsUtils.cxx  epicsUtils.h  epicsUtils.i  epicsUtils_wrap.cxx  msiUtils.cxx  msiUtils.h  msiUtils.i
src/pv/: inetAddressUtil.h  remote.h
test/: conftest.py  pvlist_api.txt  pvlist_fmt.txt  pvlist_ok.txt  pvlist_rule.txt  record_cassettes.py  record_cassettes.sh  test.cmd  test.db  test.macro  test.substitutions  test_autofix.py  test_cassettes.py  test_db_parser.py  test_fuzzing.py  test_naming_api.py  test_parser.py  test_pict.py  test_reporter.py  test_rule_loader.py  test_rules.py  test_validator.py
test/cassettes/: HOW_TO_RECORD.md  naming_service_prod.json
test/fixtures/: naming_api_responses.json  pvlist_element_length.txt  pvlist_format_invalid.txt  pvlist_format_valid.txt  pvlist_property_rules.txt  test_records.db
