[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pvValidatorUtils"
version = "1.8.0"
authors = [
    {name = "Alfio Rizzo", email = "alfio.rizzo@ess.eu"},
]
description = "pvValidator.py is a tool to validate EPICS PVs based on CHESS document [ESS-0000757]"
readme = "README.md"
license = {text = "GPL"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "pyyaml",
]
keywords = ["PV", "Validation", "Naming Convention"]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest", "responses", "hypothesis"]

[tool.setuptools]
platforms = ["Linux","WSL"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pvValidatorUtils" = ["*.so*"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "ess_network: requires ESS Naming Service network access",
    "epics_ioc: requires running EPICS IOC",
]

[project.scripts]
"pvValidator" = "pvValidatorUtils.pvValidator:main"
