[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pvValidatorUtils"
version = "2.0.0"
authors = [
    {name = "Alfio Rizzo", email = "alfio.rizzo@ess.eu"},
    {name = "Dirk Nordt", email = "dirk.nordt@esss.se"},
]
description = "Validates EPICS PV names against ESS Naming Convention (ESS-0000757)"
readme = "README.md"
license = {text = "GPL-3.0-only"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "requests",
    "pyyaml",
]
keywords = ["PV", "Validation", "Naming Convention"]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest", "responses", "hypothesis"]

[tool.setuptools]
platforms = ["Linux","WSL"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pvValidatorUtils" = ["*.so*", "web/**/*"]

[tool.pytest.ini_options]
testpaths = ["test"]
markers = [
    "ess_network: requires ESS Naming Service network access",
    "epics_ioc: requires running EPICS IOC",
]

[project.scripts]
"pvValidator" = "pvValidatorUtils.pvValidator:main"
